crates/swc_ecma_react_compiler/tests/fixtures/upstream/rules-of-hooks/error.invalid-condtionally-call-hooklike-property-of-local/error.txt
Found 1 error:

Error: Hooks must always be called in a consistent order, and may not be called conditionally. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)

error.invalid-condtionally-call-hooklike-property-of-local.ts:7:4
   5 |   if (props.cond) {
   6 |     const foo = local.useFoo;
>  7 |     foo();
     |     ^^^ Hooks must always be called in a consistent order, and may not be called conditionally. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)
   8 |   }
   9 | }
  10 |
